# faas

./: .envrc  .gitignore  API.md  CI_FIXES.md  CLAUDE.md  CONTAINERD.md  DEPLOYMENT.md  DNS_DESIGN.md  DOCKER_IMPLEMENTATION.md  Dockerfile  Dockerfile.test-handler  FAAS_RUNTIME.md  IMPLEMENTATION_STATUS.md  PACKAGING.md  README.md  RUNC.md  SOCKET_HANDOFF.md  TESTING.md  TESTING_SETUP_SUMMARY.md  docker_handler.py  faas  faasd.py  handler.py  pyproject.toml  pytest.ini  pytest.toml  requirements-dev.txt  server.py  tasks.py  test.sh  test_client.py  test_handler.py  test_suite_orb.sh
.github/workflows/: test.yml
cloud-init/: README.md  faas-cloud-init.yaml
docs/: CI_TESTING_APPROACH.md  TESTING_STRATEGY.md  VMTEST_GUIDE.md
functions/fibonacci/: Dockerfile  handler.py
scripts/: build_qemu_image.sh
src/tasks/: tasks.py
systemd/: README.md  coredns.service  faasd.service  wg-faas.service
tasks/: main.py
tests/: README.md  common.sh  conftest.py  create_test_vm.sh  setup_vm.sh  test_concurrency.py  test_container_lifecycle.py  test_image_extraction.py  test_network_management.py  test_server.py  test_socket_passing.py  test_tasks.py
tests/helpers/: faas_test_utils.py
vm/: .gitignore  common.sh  create_test_vm.sh  meta-data  user-data
