[project]
name = "faas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "networkx>=3.6",
    "watchfiles>=1.1.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
